--- a/build
+++ b/build
@@ -1,1 +1,1 @@
-g++ BubbleSort.cpp InsertionSort.cpp QuickSort.cpp SelectionSort.cpp Main.cpp -o Sort
+g++ BubbleSort.cpp InsertionSort.cpp MergeSort.cpp QuickSort.cpp SelectionSort.cpp Main.cpp -o Sort
